# tibia_bot_860

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  vocation_battlelist_scan.txt  vocation_scan.txt
examples/: bot_with_scripts.py  test_phase3.py
src/: config.yaml  main.py
src/ai/: __init__.py
src/ai/behavior/: __init__.py  behavior_tree.py  nodes.py
src/ai/combat/: __init__.py  combat_ai.py  skill_rotation.py  threat_analyzer.py
src/ai/decision/: __init__.py  decision_maker.py  priorities.py
src/ai/pathfinding/: __init__.py  astar.py  map_analyzer.py  pathfinder.py
src/application/: bot_engine.py
src/application/conditions/: base_condition.py  creature_conditions.py  player_conditions.py
src/application/dto/: bot_status_dto.py  creature_dto.py  player_dto.py
src/application/events/: event_handlers.py  event_manager.py  event_types.py
src/application/scripts/: aimbot_script.py  base_script.py  cavebot_script.py  healing_script.py  looter_script.py  script_engine.py
src/application/use_cases/: cast_spell.py  connect_bot.py  start_bot.py  stop_bot.py
src/config/: settings.py
src/core/constants/: addresses_860.py  items.py  spells.py
src/core/entities/: creature.py  item.py  player.py  spell.py  waypoint.py
src/shared/: decorators.py  utils.py
src/tibia_bot_860.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ui/: simple_gui.py
src/utils/: hotkeys.py  performance.py
tests/: test_player_reader.py
tools/: vocation_scanner.py
(+26 files in other folders)
